add demo table
